src/app/ads/ads.component.css
#bg-div{
    position:fixed;
    height:100%;
    width:100%;
    background:url("https://hdwallsource.com/img/2014/9/blur-wallpaper-26339-27030-hd-wallpapers.jpg");
    left:0;
}

#ads {
    margin-top:67px;
    width:100%;
    height:100%;
    position:absolute;
    left:0;
}

.ad {
    width:60%;
    padding-bottom: 1%;
}

.ad-container {
    display:block;
    background-color: #07222c;
    width:100%;
    border-radius:1.2em;
    text-align: left;
    padding: 0.5%;
    -webkit-box-shadow: 0px 0px 41px 6px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 41px 6px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 41px 6px rgba(0,0,0,0.75);
    cursor: pointer;
}

.ad-details {
    background-color: rgb(232, 237, 238);
    height: 10em;
    border-radius: 1em;
    padding:0.5%;
}

#title-td {
    padding-left: 0.3em;
    padding-top: 0.2em;
    height: 1.5em;
    width: 90%;
    color: #07222c;
    font-size: 1.3em;
    font-weight: bold;

}

#date-td {
    width: 10%;
    margin-left: 80%;
    margin-right: 40%;
}

#image-td {
    height: 7em;
    width: 11em;
    margin-top: 5em;
    text-align: center;
}

#ads-image {
    width: 10em;
    height: 6em;
    border: #07222c solid 0.2em;
}

#description-td {
    height: 3em;
    width: 26em;
    vertical-align: top;
    overflow: hidden;
    display: inline-block;
    white-space: normal;
}

#type-td {
    text-align: left;
    width: 60em;
}

#category-td {
    text-align: right;
    width: 60em;
    white-space: nowrap;
}

